# MovieManager

./: .gitignore  AUDIT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_libraries.sql  002_movies.sql  003_series.sql  004_media.sql  005_people_studios.sql  006_tags_genres.sql  007_junction_movies.sql  008_junction_series.sql  009_collections.sql  010_system.sql  011_images.sql  012_rules_update.sql  013_images_multi.sql  014_volume_label.sql  015_settings.sql  016_smart_collections.sql  017_operation_tracking.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analysis.rs  backup.rs  collections.rs  database.rs  episodes.rs  export.rs  history.rs  images.rs  inbox.rs  libraries.rs  mod.rs  movies.rs  nfo.rs  people.rs  rules.rs  scan.rs  seed.rs  series.rs  settings.rs  stats.rs  studios.rs  tags.rs  tmdb.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/modules/: backup.rs  change_log.rs  filename_parser.rs  image_cache.rs  ingestion.rs  media_analysis.rs  mod.rs  nfo_parser.rs  pipeline.rs  rules_engine.rs  tmdb.rs
src/components/: DropZone.tsx  FilterBar.tsx  ImagePickerModal.tsx  LightboxModal.tsx  SmartPoster.tsx  Toast.tsx  ui.tsx
src/layouts/: Sidebar.tsx  Topbar.tsx
src/lib/: api.ts  hooks.ts  tokens.ts  useImage.ts  useKeyboardShortcuts.ts
src/pages/: CatalogPages.tsx  DuplicatesPage.tsx  EditMoviePage.tsx  EditPersonPage.tsx  ImportPage.tsx  (+9 more)
(+1 files in other folders)
